--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache py-pip=9.0.0-r1
+            apk add --no-cache py-pip=22.0.4
             pip install docker-compose==1.15.0
       - run:
           name: Run tests
